--- a/src/components/View_3D/View_3D.css
+++ b/src/components/View_3D/View_3D.css
@@ -1,15 +1,13 @@
 
-.toolsClose {
+.view_3D {
   position: absolute;
-  top: 5px;
-  left: 5px;
+  top:177px;
+  right: 5px;
   width: 30px;
   height: 30px;
   background-color:var(--backgroundButtons);
-  display: none;
 }
-
-.toolsClose:hover {
+.view_3D:hover {
   background-color:var(--colorTextSoftGrey); 
   cursor: pointer;
 }
