--- a/src/components/Layers/Layers.css
+++ b/src/components/Layers/Layers.css
@@ -1,15 +1,13 @@
-
-.toolsClose {
+.layers {
   position: absolute;
-  top: 5px;
-  left: 5px;
+  top: 253px;
+  right: 5px;
   width: 30px;
   height: 30px;
   background-color:var(--backgroundButtons);
-  display: none;
 }
 
-.toolsClose:hover {
+.layers:hover {
   background-color:var(--colorTextSoftGrey); 
   cursor: pointer;
 }
