--- a/src/components/Tools/Tools.css
+++ b/src/components/Tools/Tools.css
@@ -1,15 +1,17 @@
-
-.toolsClose {
+.containerTools {
   position: absolute;
   top: 5px;
   left: 5px;
   width: 30px;
   height: 30px;
   background-color:var(--backgroundButtons);
-  display: none;
 }
 
-.toolsClose:hover {
+.toolsOpen:hover, .toolsClose:hover  {
   background-color:var(--colorTextSoftGrey); 
   cursor: pointer;
+}
+
+.toolsClose {
+  display: none;
 }
