--- a/src/components/MapBox/MapBox.css
+++ b/src/components/MapBox/MapBox.css
@@ -2,3 +2,17 @@
   width: 100vw;
   height: 100vh;
 }
+
+.sidebarStyle {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 12px;
+  background-color: #404040;
+  color: #ffffff;
+  z-index: 1 !important;
+  padding: 6px;
+  font-weight: bold;
+}
+
